--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -135,3 +135,8 @@ SMSHost=192.168.1.100
 SMSPort=2775
 SMSUsername=smppclient
 SMSPassword=password
+
+Selenium.ServerHost=192.168.1.134
+Selenium.ServerPort=4444
+Selenium.RIHost=192.168.1.134
+Selenium.RIPort=12222
