git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7065 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -140,3 +140,16 @@ Selenium.ServerHost=192.168.1.134
 Selenium.ServerPort=4444
 Selenium.RIHost=192.168.1.134
 Selenium.RIPort=12222
+
+AolHost=login.oscar.aol.com
+AolPort=5190
+AolUsername1=rapidinformer2
+AolPassword1=rapidinformer01
+AolUsername2=rapidinformer4
+AolPassword2=rapidinformer4
+AolUsername3=rapidinformer3
+AolPassword3=rapidinformer01
+AolUsername4=rapidinformer1
+AolPassword4=rapidinformer1
+AolUsername5=rapidinformer5
+AolPassword5=rapidinformer5
