CMDB-1450 - Implement automated selenium test to test a scheduled cron script
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7069 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -140,6 +140,7 @@ Selenium.ServerHost=192.168.1.134
 Selenium.ServerPort=4444
 Selenium.RIHost=192.168.1.134
 Selenium.RIPort=12222
+Selenium.browser =*firefox
 
 AolHost=login.oscar.aol.com
 AolPort=5190
