CMDB-1450 - Implement automated selenium test to test a scheduled cron script
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7105 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -141,7 +141,7 @@ Selenium.ServerPort=4444
 Selenium.RIHost=192.168.1.134
 Selenium.RIPort=12222
 Selenium.browser =*firefox
-Selenium.RS_HOME ="../Distribution/RapidServer"
+Selenium.RS_HOME =../Distribution/RapidServer
 
 AolHost=login.oscar.aol.com
 AolPort=5190
