git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7560 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -28,6 +28,11 @@ SYBASE.DatabaseUrl=jdbc:sybase:Tds:192.168.1.178:4100/?LITERAL_PARAMS=true
 SYBASE.DatabaseUsername=root
 SYBASE.DatabasePassword=
 
+MSSQL.DatabaseDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+MSSQL.DatabaseUrl=jdbc:sqlserver://192.168.1.100:1433;databaseName=master;
+MSSQL.DatabaseUsername=sa
+MSSQL.DatabasePassword=
+
 SmartsSAMBroker=192.168.1.102:426
 SmartsSAMDomain=INCHARGE-SA
 SmartsSAMUser=admin
