CMDB-1465 - Opennms connector tests
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7720 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -28,6 +28,11 @@ SYBASE.DatabaseUrl=jdbc:sybase:Tds:192.168.1.178:4100/?LITERAL_PARAMS=true
 SYBASE.DatabaseUsername=root
 SYBASE.DatabasePassword=
 
+POSTGRE.DatabaseDriver=org.postgresql.Driver
+POSTGRE.DatabaseUrl=jdbc:postgresql:192.168.1.167:5432/opennms
+POSTGRE.DatabaseUsername=opennms
+POSTGRE.DatabasePassword=opennms
+
 MSSQL.DatabaseDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 MSSQL.DatabaseUrl=jdbc:sqlserver://192.168.1.100:1433;databaseName=master;
 MSSQL.DatabaseUsername=sa
