CMDB-1191 - Implement test for TransferLdapUsers script
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8178 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -66,10 +66,11 @@ SecureAMBrokerPassword=Secure
 
 
 ##Used for ldap connection tests
+##a user with username:admin , displayname:admin , password:admin must be created in ldap server
 ##a user with username:ldapuser , displayname:ldapuser , password:1234 must be created in ldap server
 Ldap.URL=ldap://192.168.1.178
-Ldap.Username=ldapuser@molkay.selfip.net
-Ldap.Password=1234
+Ldap.Username=admin@molkay.selfip.net
+Ldap.Password=admin
 
 ##Used for ldap user authentication
 Ldap.AuthUsername=cn=ldapuser,cn=users,DC=molkay,DC=selfip,DC=net
