CMDB-1191 - Implement test for TransferLdapUsers script & ldap improvements ( transfer groups and CRUD operations to ldap server  )
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8180 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -66,20 +66,19 @@ SecureAMBrokerPassword=Secure
 
 
 ##Used for ldap connection tests
-##a user with username:admin , displayname:admin , password:admin must be created in ldap server
-##a user with username:ldapuser , displayname:ldapuser , password:1234 must be created in ldap server
+##a user with username:admin , password:admin,member of administrators must be created in ldap server
+##a user with username:ldapuser , password:1234, member of Users must be created in ldap server
 Ldap.URL=ldap://192.168.1.178
 Ldap.Username=admin@molkay.selfip.net
 Ldap.Password=admin
 
 ##Used for ldap user authentication
-Ldap.AuthUsername=cn=ldapuser,cn=users,DC=molkay,DC=selfip,DC=net
+Ldap.AuthUsername=CN=ldapuser,CN=users,DC=molkay,DC=selfip,DC=net
 Ldap.AuthPassword=1234
 
 ##Used for ldap query
-Ldap.SearchBase=CN=Users,DC=molkay,DC=selfip,DC=net
-Ldap.SearchFilter=objectClass=user
-Ldap.SearchSubDirectories=1
+Ldap.SearchBase=DC=molkay,DC=selfip,DC=net
+
 
 HypericBaseUrl=http://192.168.1.102:7080
 HypericUsername=hqadmin
