sametime account fixes , demo server changed
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8260 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -126,11 +126,11 @@ ApgBaseUrl=http://192.168.1.117:58080/APG-WS/
 ApgUsername=admin
 ApgPassword=changeme
 
-SametimeHost=stdemo3.dfw.ibm.com
+SametimeHost=sametime.lotus.com
 SametimeCommunity=
-SametimeUsername=rapid informer1
+SametimeUsername=ifountain.ifountain@greenhouse.lotus.com
 SametimePassword=molkay01
-SametimeSecondaryUsername=rapid cmdb1
+SametimeSecondaryUsername=abdurrahim.Eke@greenhouse.lotus.com
 SametimeSecondaryPassword=molkay01
 
 JabberHost=192.168.1.100
