CMDB-1794 - Implement Rivermuse datasource
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8647 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/RCMDBTest.properties
+++ b/RapidCMDB/devDocs/RCMDBTest.properties
@@ -165,3 +165,8 @@ AolUsername4=rapidinformer1
 AolPassword4=rapidinformer1
 AolUsername5=rapidinformer5
 AolPassword5=rapidinformer5
+
+RivermuseDriver=com.mysql.jdbc.Driver
+RivermuseUrl=jdbc:mysql://192.168.1.179/rivermuse
+RivermuseUsername=root
+RivermusePassword=
