git-svn-id: http://www.ifountain.org/repos/os/RapidModules@9344 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidCMDB/devDocs/Test.properties
+++ b/RapidCMDB/devDocs/Test.properties
@@ -170,3 +170,7 @@ RivermuseDriver=com.mysql.jdbc.Driver
 RivermuseUrl=jdbc:mysql://192.168.1.179/rivermuse
 RivermuseUsername=root
 RivermusePassword=
+
+EsHost=192.168.1.134
+EsPort=9300
+EsCluster=testCluster1
